--- a/servicegateway/src/main/resources/application.properties
+++ b/servicegateway/src/main/resources/application.properties
@@ -3,6 +3,10 @@ server.port=5555
 
 zuul.routes.api-a.path=/api-a/**
 zuul.routes.api-a.serviceId=COMPUTE-SERVICE
+zuul.routes.api-a=/api-a/**
+
+
 zuul.routes.api-b.path=/api-b/**
 zuul.routes.api-b.serviceId=COMPUTE-SERVICE
+
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
