--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=config-server
-server.port=7001
+server.port=8888
 
 # gitπ‹¿Ì≈‰÷√
 spring.cloud.config.server.git.uri=https://github.com/DadeCoder/SpringCloudSample/
-spring.cloud.config.server.git.searchPaths=com/
+spring.cloud.config.server.git.searchPaths=configserver/config
 spring.cloud.config.server.git.username=DadeCoder
 spring.cloud.config.server.git.password=Hitachi@123
+
+#spring.profiles.active=native
+#spring.cloud.config.server.native.searchLocations=file://${user.dir}/src/main/resources/config
+#
+#spring.cloud.config.server.git.uri=file://${user.dir}/src/main/resources/config
+##spring.cloud.config.server.git.uri=file://${user.dir}/src/main/resources/config
+#spring.cloud.config.uri=http://localhost:8888
+
