--- a/configclient/src/main/resources/bootstrap.properties
+++ b/configclient/src/main/resources/bootstrap.properties
@@ -1,12 +1,8 @@
-# 配置中心服务的地址
+spring.application.name=cloudconfig
+spring.cloud.config.profile=dev
+#spring.cloud.config.label=master
 spring.cloud.config.uri=http://localhost:8888/
 
-# 要读取的配置文件application属性
-#spring.cloud.config.name=cloudconfig
-spring.application.name=cloudconfig
-
-# 要读取的配置文件profile属性,默认是dev
-#spring.cloud.config.profile=${config.profile:dev}
-spring.cloud.config.profile=dev
+server.port=7001
 
 
