--- a/configclient/src/main/resources/bootstrap.properties
+++ b/configclient/src/main/resources/bootstrap.properties
@@ -1,8 +1,15 @@
-spring.application.name=cloudconfig
-spring.cloud.config.profile=dev
-#spring.cloud.config.label=master
-spring.cloud.config.uri=http://localhost:8888/
+#spring.application.name=cloudconfig
+#spring.cloud.config.profile=dev
+##spring.cloud.config.label=master
+#spring.cloud.config.uri=http://localhost:8888/
 
 server.port=7001
+spring.application.name=cloudconfig
+
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
+spring.cloud.config.profile=dev
 
 
