--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.cloud.config.server.git.searchPaths=configserver/config
 spring.cloud.config.server.git.username=DadeCoder
 spring.cloud.config.server.git.password=Hitachi@123
 
+# 配置服务注册中心
+eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+
 #spring.profiles.active=native
 #spring.cloud.config.server.native.searchLocations=file://${user.dir}/src/main/resources/config
 #
