--- a/configclient/src/main/resources/bootstrap.properties
+++ b/configclient/src/main/resources/bootstrap.properties
@@ -12,4 +12,5 @@ spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
 spring.cloud.config.profile=dev
 
+management.security.enabled=false
 
