--- a/springsecurity/src/main/resources/application.properties
+++ b/springsecurity/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port = 8090
 spring.data.mongodb.host=192.168.189.128
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=security_dev
+
+security.user.password=123456
