front-end redir and reaccess resource

--- a/springsecurity/src/main/resources/application.properties
+++ b/springsecurity/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=security_dev
 
 security.user.password=123456
+#security.basic.enabled = false
